@@ -28,5 +28,3 @@
 #include "trivial_rmw.h"
 #include "config_rmw.h"
 #include "purging_rmw.h"
-
-#define NO_WASTE_FOLDER 2
