@@ -4,6 +4,12 @@
 
 When building, rmw will now use the config.h that's generated by ./configure.
 
+Added make_dir(), which creates directories when parents don't exist;
+used it in several areas for code-cleanup (#18) and added related error
+checking (#13).
+
+Removed 2 functions: waste_check() and mkdir_err().
+
 -- Aug. 28 --
 
 Added -std=gnu99 -Wall to the Makefile, cleaned up some warnings
